[tool.poetry]
name = "borax"
version = "1.4.2"
description = "A util collections for Python3."
readme = "long_description.rst"
authors = ["kinegratii <kinegratii@gmail.com>"]
homepage = "https://github.com/kinegratii/borax"
documentation = "https://kinegratii.github.io/borax"
license = "MIT"
keywords = ["python3", "utils", "lunar-calendar"]
classifiers=[
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.5",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3 :: Only",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Topic :: Software Development :: Libraries",
    "Topic :: Utilities",
    'Operating System :: OS Independent'
]

[tool.poetry.dev-dependencies]
nose = "^1.3"
coverage = "^4.5"
flake8 = "^3.5"
mccabe = "^0.6"
wheel = "^0.31"