[metadata]
long_description = file: README.md
long_description_content_type = text/markdown
project_urls =
    Homepage = https://borax.readthedocs.io/zh_CN/latest/
    Source Code = https://github.com/kinegratii/borax
    Bug Tracker = https://github.com/kinegratii/borax/issues

[nosetests]
traverse-namespace = 1

[flake8]
ignore = E743,E501,F401
max-complexity = 25
exclude = .git,__pycache__,docs/source/conf.py,old,build,dist